--- a/app/views/convocatorias/show.html.erb
+++ b/app/views/convocatorias/show.html.erb
@@ -22,11 +22,9 @@
   <dd><%= image_tag(@convocatoria.imagen4.url(:thumb)) %></dd>
 </dl>
 
-<%= link_to t('.back', :default => t("helpers.links.back")),
-              convocatorias_path, :class => 'btn btn-default'  %>
-<%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_convocatoria_path(@convocatoria), :class => 'btn btn-default' %>
-<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+<%= link_to t('.back', :default => t("helpers.links.back")), convocatorias_path, :class => 'btn btn-default'  %>
+<%= link_to t('.edit', :default => t("helpers.links.edit")), edit_convocatoria_path(@convocatoria), :class => 'btn btn-default' %>
+<%= link_to t('.destroy', :default => t("helpers.links.destroy")), 
               convocatoria_path(@convocatoria),
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
