--- a/app/views/documentos/index.html.erb
+++ b/app/views/documentos/index.html.erb
@@ -7,21 +7,7 @@
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
       <th><%= model_class.human_attribute_name(:titulo) %></th>
-      <th><%= model_class.human_attribute_name(:descripcion) %></th>
-      <th><%= model_class.human_attribute_name(:contenido) %></th>
-      <th><%= model_class.human_attribute_name(:tipo_extension) %></th>
-      <th><%= model_class.human_attribute_name(:tipo_documento) %></th>
       <th><%= model_class.human_attribute_name(:visible) %></th>
-      <th><%= model_class.human_attribute_name(:archivo1) %></th>
-      <th><%= model_class.human_attribute_name(:archivo2) %></th>
-      <th><%= model_class.human_attribute_name(:archivo3) %></th>
-      <th><%= model_class.human_attribute_name(:archivo4) %></th>
-      <th><%= model_class.human_attribute_name(:archivo5) %></th>
-      <th><%= model_class.human_attribute_name(:imagen1) %></th>
-      <th><%= model_class.human_attribute_name(:imagen2) %></th>
-      <th><%= model_class.human_attribute_name(:imagen3) %></th>
-      <th><%= model_class.human_attribute_name(:imagen4) %></th>
-      <th><%= model_class.human_attribute_name(:imagen5) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
@@ -31,23 +17,10 @@
       <tr>
         <td><%= link_to documento.id, documento_path(documento) %></td>
         <td><%= documento.titulo %></td>
-        <td><%= documento.descripcion %></td>
-        <td><%= documento.contenido %></td>
-        <td><%= documento.tipo_extension %></td>
-        <td><%= documento.tipo_documento %></td>
         <td><%= documento.visible %></td>
-        <td><%= documento.archivo1 %></td>
-        <td><%= documento.archivo2 %></td>
-        <td><%= documento.archivo3 %></td>
-        <td><%= documento.archivo4 %></td>
-        <td><%= documento.archivo5 %></td>
-        <td><%= documento.imagen1 %></td>
-        <td><%= documento.imagen2 %></td>
-        <td><%= documento.imagen3 %></td>
-        <td><%= documento.imagen4 %></td>
-        <td><%= documento.imagen5 %></td>
         <td><%=l documento.created_at %></td>
         <td>
+          <%= link_to 'Ver', documento, class: 'btn btn-default btn-xs' %>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_documento_path(documento), :class => 'btn btn-default btn-xs' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
