--- a/app/views/presidentes/_form.html.erb
+++ b/app/views/presidentes/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @presindente, :html => { :class => "form-horizontal presindente" } do |f| %>
+<%= form_for @presindente, :html => { :class => "form-horizontal presindente", multipart: true } do |f| %>
 
     <% if @presindente.errors.any? %>
     <div id="error_expl" class="panel panel-danger">
@@ -81,40 +81,40 @@
   <div class="control-group">
     <%= f.label :foto, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :foto, :class => 'form-control' %>
+      <%= f.file_field :foto, :class => 'form-control' %>
     </div>
     <%= error_span(@presindente[:foto]) %>
   </div>
   <div class="control-group">
     <%= f.label :imagen1, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :imagen1, :class => 'form-control' %>
+      <%= f.file_field :imagen1, :class => 'form-control' %>
     </div>
     <%= error_span(@presindente[:imagen1]) %>
   </div>
   <div class="control-group">
     <%= f.label :imagen2, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :imagen2, :class => 'form-control' %>
+      <%= f.file_field :imagen2, :class => 'form-control' %>
     </div>
     <%= error_span(@presindente[:imagen2]) %>
   </div>
   <div class="control-group">
     <%= f.label :imagen3, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :imagen3, :class => 'form-control' %>
+      <%= f.file_field :imagen3, :class => 'form-control' %>
     </div>
     <%= error_span(@presindente[:imagen3]) %>
   </div>
   <div class="control-group">
     <%= f.label :imagen4, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :imagen4, :class => 'form-control' %>
+      <%= f.file_field :imagen4, :class => 'form-control' %>
     </div>
     <%= error_span(@presindente[:imagen4]) %>
   </div>
 
-
+  <br />
   <%= f.submit nil, :class => 'btn btn-primary' %>
   <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
             presidentes_path, :class => 'btn btn-default' %>
