--- a/app/views/webamigas/_form.html.erb
+++ b/app/views/webamigas/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @webamiga, :html => { :class => "form-horizontal webamiga" } do |f| %>
+<%= form_for @webamiga, :html => { :class => "form-horizontal webamiga", multipart: true } do |f| %>
 
     <% if @webamiga.errors.any? %>
     <div id="error_expl" class="panel panel-danger">
@@ -25,7 +25,7 @@
   <div class="control-group">
     <%= f.label :descripcion, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :descripcion, :class => 'form-control' %>
+      <%= f.text_area :descripcion, :class => 'form-control' %>
     </div>
     <%= error_span(@webamiga[:descripcion]) %>
   </div>
@@ -39,14 +39,14 @@
   <div class="control-group">
     <%= f.label :logo, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :logo, :class => 'form-control' %>
+      <%= f.file_field :logo, :class => 'form-control' %>
     </div>
     <%= error_span(@webamiga[:logo]) %>
   </div>
   <div class="control-group">
     <%= f.label :contenido, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :contenido, :class => 'form-control' %>
+      <%= f.text_area :contenido, rows: '5', cols: '10', :class => 'form-control' %>
     </div>
     <%= error_span(@webamiga[:contenido]) %>
   </div>
@@ -67,11 +67,15 @@
   <div class="control-group">
     <%= f.label :visible, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :visible, :class => 'form-control' %>
+      <%= f.select :visible,[
+            ['Visible', 'visible'],
+            ['No Visible', 'no_visible']
+        ], :class => 'form-control' %>
     </div>
     <%= error_span(@webamiga[:visible]) %>
   </div>
 
+  <br />
 
   <%= f.submit nil, :class => 'btn btn-primary' %>
   <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
