--- a/app/views/apertac_paginas/_form.html.erb
+++ b/app/views/apertac_paginas/_form.html.erb
@@ -20,7 +20,7 @@
   <div class="form-group">
     <%= f.label :contenido, class: 'col-sm-2 control-label' %>
     <div class="col-lg-7">
-      <%= f.text_area :contenido, :class => 'ckeditor' %>
+      <%= f.text_area :contenido, rows: '20', cols: '10', :class => 'form-control' %>
     </div>    
   </div>
   <div class="form-group">
