--- a/app/views/directorios/_form.html.erb
+++ b/app/views/directorios/_form.html.erb
@@ -71,7 +71,7 @@
   <div class="form-group">
     <%= f.label :contenido, class: 'col-sm-2 control-label' %>
     <div class="col-lg-8">
-      <%= f.text_area :contenido, class: 'ckeditor' %>  
+      <%= f.text_area :contenido, rows: '10',class: 'form-control' %>  
     </div>
   </div>
 
