--- a/app/views/noticias/show.html.erb
+++ b/app/views/noticias/show.html.erb
@@ -10,10 +10,10 @@
   <div class="col-lg-10"><%= @noticia.contenido.html_safe %></div>
   <div class="col-lg-2"><b>Imagenes:</b></div>
   <div class="col-lg-10">
-    <%= image_tag(@noticia.imagen1.url(:thumb)) if @noticia.imagen1? %>
-    <%= image_tag(@noticia.imagen2.url(:thumb)) if @noticia.imagen2? %>
-    <%= image_tag(@noticia.imagen3.url(:thumb)) if @noticia.imagen3? %>
-    <%= image_tag(@noticia.imagen4.url(:thumb)) if @noticia.imagen4? %>
+    <%= image_tag(@noticia.imagen1.url(:thumb)) if @noticia.imagen1? %><br />
+    <%= image_tag(@noticia.imagen2.url(:thumb)) if @noticia.imagen2? %><br />
+    <%= image_tag(@noticia.imagen3.url(:thumb)) if @noticia.imagen3? %><br />
+    <%= image_tag(@noticia.imagen4.url(:thumb)) if @noticia.imagen4? %><br />
     <%= image_tag(@noticia.imagen5.url(:thumb)) if @noticia.imagen5 %>    
   </div>
   <div class="col-lg-2"><b>Visible:</b></div>
