--- a/app/views/presidentes/_form.html.erb
+++ b/app/views/presidentes/_form.html.erb
@@ -74,7 +74,7 @@
   <div class="control-group">
     <%= f.label :contenido, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :contenido, :class => 'form-control' %>
+      <%= f.text_area :contenido, rows: '10', cols: '5' , :class => 'form-control' %>
     </div>
     <%= error_span(@presindente[:contenido]) %>
   </div>
