--- a/app/views/noticias/_form.html.erb
+++ b/app/views/noticias/_form.html.erb
@@ -26,34 +26,29 @@
   </div>  
   <div class="form-group">
     <%= f.label :contenido, class: 'col-sm-2 control-label' %>
-    <div class="col-lg-9">
-      <%= f.text_area :contenido, :class => 'ckeditor' %>      
+    <div class="col-lg-8">
+      <%= f.text_area :contenido,rows: '10', cols: '6',:class => 'form-control' %>      
     </div>    
   </div>
 
   <div class="form-group">
     <%= f.label :imagenes, class: 'col-sm-2 control-label' %>
-    <div class="col-lg-2">
-      <%= image_tag(@noticia.imagen1.url(:thumb)) if @noticia.imagen1? %>
+    <div class="col-lg-2">      
       <%= f.file_field :imagen1, class: 'form-control' %>      
     </div>   
-    <div class="col-lg-2">
-      <%= image_tag(@noticia.imagen2.url(:thumb)) if @noticia.imagen2? %>
+    <div class="col-lg-2">      
       <%= f.file_field :imagen2, class: 'form-control' %>      
     </div> 
-    <div class="col-lg-2">
-      <%= image_tag(@noticia.imagen3.url(:thumb)) if @noticia.imagen3? %>
+    <div class="col-lg-2">      
       <%= f.file_field :imagen3, class: 'form-control' %>      
     </div>
   </div>
   <div class="form-group">
     <div class="col-lg-2"></div>    
-    <div class="col-lg-2">
-      <%= image_tag(@noticia.imagen4.url(:thumb)) if @noticia.imagen4? %>
+    <div class="col-lg-2">      
       <%= f.file_field :imagen4, class: 'form-control' %>      
     </div> 
-    <div class="col-lg-2">
-      <%= image_tag(@noticia.imagen5.url(:thumb)) if @noticia.imagen5? %>
+    <div class="col-lg-2">      
       <%= f.file_field :imagen5, class: 'form-control' %>      
     </div>
   </div>
