--- a/app/views/layouts/backend.html.erb
+++ b/app/views/layouts/backend.html.erb
@@ -32,6 +32,7 @@
                     <li><a href="/documentos">Documentos</a></li>
                     <li><a href="/anuncios">Anuncios</a></li>
                     <li><a href="/webamigas">Web Amigas</a></li>
+                    <li><a href="/contactenos">Contacto</a></li>
                 </ul>
                 <ul class="nav navbar-nav pull-right">
                   <li>
