--- a/app/views/anuncios/_form.html.erb
+++ b/app/views/anuncios/_form.html.erb
@@ -32,14 +32,14 @@
   <div class="control-group">
     <%= f.label :descripcion, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_area :descripcion, :class => 'form-control' %>
+      <%= f.text_area :descripcion, rows: '3' ,:class => 'form-control' %>
     </div>
     <%= error_span(@anuncio[:descripcion]) %>
   </div>
   <div class="control-group">
     <%= f.label :contenido, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_area :contenido, :class => 'form-control' %>
+      <%= f.text_area :contenido, rows: '10', cols: '6', :class => 'form-control' %>
     </div>
     <%= error_span(@anuncio[:contenido]) %>
   </div>
