--- a/app/views/anuncios/show.html.erb
+++ b/app/views/anuncios/show.html.erb
@@ -4,6 +4,8 @@
 </div>
 
 <dl class="dl-horizontal">
+  <dt><strong>id</strong></dt>
+  <dd><%= @anuncio.id %></dd>
   <dt><strong><%= model_class.human_attribute_name(:titulo) %>:</strong></dt>
   <dd><%= @anuncio.titulo %></dd>
   <dt><strong><%= model_class.human_attribute_name(:imagen) %>:</strong></dt>
@@ -28,11 +30,11 @@
   <dd><%= @anuncio.tipo %></dd>
 </dl>
 
-<%= link_to t('.back', :default => t("helpers.links.back")),
+<%= link_to t('.Regresar', :default => t("helpers.links.Regresar")),
               anuncios_path, :class => 'btn btn-default'  %>
-<%= link_to t('.edit', :default => t("helpers.links.edit")),
+<%= link_to t('.edit', :default => t("helpers.links.editar")),
               edit_anuncio_path(@anuncio), :class => 'btn btn-default' %>
-<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+<%= link_to t('.destroy', :default => t("helpers.links.eliminar")),
               anuncio_path(@anuncio),
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
