--- a/app/views/noticias/_form.html.erb
+++ b/app/views/noticias/_form.html.erb
@@ -27,7 +27,7 @@
   <div class="form-group">
     <%= f.label :contenido, class: 'col-sm-2 control-label' %>
     <div class="col-lg-8">
-      <%= f.text_area :contenido,rows: '10', cols: '6',:class => 'form-control' %>      
+      <%= f.text_area :contenido, rows: '20' , cols: '20', class: 'form-control' %>      
     </div>    
   </div>
 
