--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,19 +17,19 @@
  */
 
 body {
-  padding-top: 30px;
+  padding-top: 60px;
 
 }
 
 #fondo{
-	background: #CB0A04;
+	background-image: url('http://elbolivianoenvivo.com/wp-content/uploads/2014/07/Foto-puerto-para-productos-de-importaci%C3%B3n310714.jpg');	
 }
 #contenedor {
-	padding-top: 10px;
+	padding-top: 14px;
 	padding-bottom: 15px;
 	background-color: #fff;
-	border: 1px solid #8E0703;
-    border-radius: 10px;
+	border: 1px solid #808080;
+    border-radius: 8px;
 }
 
 // color de fondo de navbar
