--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,19 +17,19 @@
  */
 
 body {
-  padding-top: 60px;
+  padding-top: 50px;
 
 }
 
 #fondo{
-	background-image: url('http://elbolivianoenvivo.com/wp-content/uploads/2014/07/Foto-puerto-para-productos-de-importaci%C3%B3n310714.jpg');	
+	background-image: url('http://cdn01.ib.infobae.com/adjuntos/162/imagenes/011/023/0011023861.jpg');	
 }
 #contenedor {
 	padding-top: 14px;
 	padding-bottom: 15px;
 	background-color: #fff;
 	border: 1px solid #808080;
-    border-radius: 8px;
+    border-radius: 0px;
 }
 
 // color de fondo de navbar
