--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Inicio</a>
+                <a class="navbar-brand" href="/">APERTAC.com</a>
               </div>
               <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
@@ -49,9 +49,8 @@
                 </ul>
                 <ul class="nav navbar-nav pull-right">
                   <li>
-                    <a href="/admins/index">
-                        <span class="glyphicon glyphicon-lock"></span>
-                        Admin
+                    <a href="/admins/index">                        
+                        Administrar
                     </a></li>
                 </ul>
               </div><!--/.nav-collapse -->
@@ -62,60 +61,61 @@
 
 
         <div class="row">
+            <% if params[:action] == 'index' %>
+              <div class="col-lg-12">
+                  <!-- Block Anuncios -->
+                  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                      <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                      <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                      <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                    </ol>
 
-            <div class="col-lg-12">
-                <!-- Block Anuncios -->
-                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                  <!-- Indicators -->
-                  <ol class="carousel-indicators">
-                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                  </ol>
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+                      <% index = 0 %>
+                      <% @anuncios.each do |anuncio| %>
+                        <% if index == 0 %>
+                          <div class="item active">
+                            <%= image_tag anuncio.imagen.url(:thumb_index) %>      
+                            <div class="carousel-caption">
+                              <h3><%= anuncio.titulo %></h3>
+                              <p>
+                                <%= anuncio.descripcion %>              
+                              </p>
+                              <%= link_to 'Ver mas..'.html_safe, "/inicios/anuncio/#{anuncio.id}", class: 'btn btn-primary btn-sm' %>
 
-                  <!-- Wrapper for slides -->
-                  <div class="carousel-inner" role="listbox">
-                    <% index = 0 %>
-                    <% @anuncios.each do |anuncio| %>
-                      <% if index == 0 %>
-                        <div class="item active">
-                          <%= image_tag anuncio.imagen.url(:thumb_index) %>      
-                          <div class="carousel-caption">
-                            <h3><%= anuncio.titulo %></h3>
-                            <p>
-                              <%= anuncio.descripcion %>              
-                            </p>
-                            <%= link_to 'Ver mas..'.html_safe, "/inicios/anuncio/#{anuncio.id}", class: 'btn btn-primary btn-sm' %>
-
+                            </div>
+                          </div>        
+                      <%  else %>
+                        <div class="item">
+                            <%= image_tag anuncio.imagen.url(:thumb_index) %>   
+                            <div class="carousel-caption">
+                              <h3><%= anuncio.titulo %></h3>
+                              <p><%= anuncio.descripcion %></p>
+                              <%= link_to '<span class="glyphicon glyphicon-eye-open"></span> Ver mas..'.html_safe, "/inicios/anuncio/#{anuncio.id}", class: 'btn btn-primary btn-sm' %>
+                            </div>
                           </div>
-                        </div>        
-                    <%  else %>
-                      <div class="item">
-                          <%= image_tag anuncio.imagen.url(:thumb_index) %>   
-                          <div class="carousel-caption">
-                            <h3><%= anuncio.titulo %></h3>
-                            <p><%= anuncio.descripcion %></p>
-                            <%= link_to '<span class="glyphicon glyphicon-eye-open"></span> Ver mas..'.html_safe, "/inicios/anuncio/#{anuncio.id}", class: 'btn btn-primary btn-sm' %>
-                          </div>
-                        </div>
-                    <% end %>
-                    <% index = 1 %>
+                      <% end %>
+                      <% index = 1 %>
 
-                    <% end %>
+                      <% end %>
+                    </div>
+
+                    <!-- Controls -->
+                    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
                   </div>
-
-                  <!-- Controls -->
-                  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                  </a>
-                  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                  </a>
-                </div>
-                <br>
-            </div>
+                  <br>
+              </div>
+            <% end %>
 
 
             <!-- Columna Izquierda -->
