--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
                 </ul>
                 <ul class="nav navbar-nav pull-right">
                   <li>
-                    <a href="/admins/index">                        
+                    <a href="/users/sign_in">                        
                         Administrar
                     </a></li>
                 </ul>
